--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,7 @@ oauth2client = "4.1.3"
 regex = ">=2020.6,<2020.10"
 joblib = "^0.15.1"
 sentry-sdk = "^0.17.4"
+Janome = "^0.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^2.10.0"
@@ -152,6 +153,7 @@ pep440-version-utils = "^0.3.0"
 pydoc-markdown = "^3.5.0"
 pytest-timeout = "^1.4.2"
 mypy = "^0.790"
+pylint = "^2.6.0"
 
 [tool.poetry.extras]
 spacy = [ "spacy",]
